# lcc-license-generator

./: .gitignore  CMakeLists.txt
src/base_lib/: CMakeLists.txt  base.h  crypto_helper.cpp
src/ini/: SimpleIni.h
src/license_generator/: CMakeLists.txt
